src/core/tests/data/invalid/same_names/part1.rsk

[REQ-same]
text = '''
there will be two items with the same names in different files... and loaded from
different directory recursions
'''

[SPC-same]
text = "this is replicated somewhere else"
